Closed Bug 1340277 Opened 9 years ago Closed 9 years ago

stylo: dynamic changes to text-overflow on elements with non-visible overflow don't work

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: bzbarsky, Unassigned)

References

()

Details

Attachments

(1 file)

Testcase in URL field. This is because we don't update the style on the scrolled-content frame. So a special case of bug 1292609. We don't have in-tree tests for this, at first glance, so should make sure to add some.
Comment on attachment 8842899 [details] Bug 1340277. Fix stylo to properly update styles on the anonymous scrolled-content frame inside a scrollframe. https://reviewboard.mozilla.org/r/116642/#review118716 Nice code/test ratio :)
Attachment #8842899 - Flags: review?(emilio+bugs) → review+
Pushed by bzbarsky@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b866630a4183 Fix stylo to properly update styles on the anonymous scrolled-content frame inside a scrollframe. r=emilio
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: