Bug 1340277.  Fix stylo to properly update styles on the anonymous scrolled-content frame inside a scrollframe.  r=emilio

MozReview-Commit-ID: DE4C6pIp8SC

--HG--
extra : rebase_source : 4e7071074791fee71b7bd61da27387035d803374